last chances before prod

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -31,7 +31,12 @@
 		"Icon5Title": "Pratique ",
 		"Icon5Text": "Des ressources et outils integrés",
 		"Content2Title": "Comment ça marche",
-		"subContentTitle1": "Par des entrepreneurs pour des entrepreneurs. Construisons ensemble l'environnement pour valider, lancer et booster nos projets",
+		"subContentTitle1": "Par des entrepreneurs pour des entrepreneurs. Construisons ensemble l'environnement pour valider, lancer et booster vos projets",
+		"subContentTitle1Text1": "Par des ",
+		"subContentTitle1Text2": "entrepreneurs",
+		"subContentTitle1Text3": "pour des",
+		"subContentTitle1Text4": " entrepreneurs. ",
+		"subContentTitle1Text5": "Construisons ensemble l'environnement pour valider, lancer et booster vos projets",
 		"Icon1SubTitle": "Le garage",
 		"Icon1SubText": "Un espace pour créer, suivre et partager son projet avec ses associés et ses partenaires",
 		"Icon2SubTitle": "La boite à outils",
@@ -43,7 +48,32 @@
 		"ToolBoxAccess": "Accèdez à la boite à outils",
 		"GarageAccess": "Le garage",
 		"SignUp": "Inscrivez-vous",
-		"CGU": "Conditions générales d'utilisation"
+		"CGU": "Conditions générales d'utilisation",
+		"TimelineStep1IconText": "Besoin",
+		"TimelineStep2TopText": "Est-ce que votre idée a du potentiel ?",
+		"TimelineStep2LineText": "IDEATION",
+		"TimelineStep2LineBottomText1": "Étude de marché",
+		"TimelineStep2LineBottomText2": "Analyse concurrentielle",
+		"TimelineStep2LineBottomText3": "Interview utilisateurs ",
+		"TimelineStep3IconText": "Idée",
+		"TimelineStep5IconText": "Lancement",
+		"TimelineStep4LineTopText": "Est-ce que votre solution répond au problème ? ",
+		"TimelineStep4LineText": "PROBLEM-SOLUTION FIT",
+		"TimelineStep4LineBottomText1": "Désirabilité",
+		"TimelineStep4LineBottomText2": "Faisabilité",
+		"TimelineStep4LineBottomText3": "Viabilité",
+		"TimelineStep6LineTopText": "Est-ce que le marché adopte votre solution ?",
+		"TimelineStep6LineText": "PRODUCT-MARKET FIT",
+		"TimelineStep6LineBottomText1": "Acquisition de traffic",
+		"TimelineStep6LineBottomText2": "Conversion",
+		"TimelineStep6LineBottomText3": "Engagement",
+		"TimelineStep7IconText": "Développement",
+		"TimelineStep8LineTopText" :"Comment accélerer votre croissance ?",
+		"TimelineStep8LineText" :"SCALING",
+		"TimelineStep8LineBottomText1" :"Industrialisation",
+		"TimelineStep8LineBottomText2" :"Investissement",
+		"TimelineStep8LineBottomText3" :"Croissance",
+		"TimelineStep9IconText" :"Croissance"
 
 	},
 	"cookie": {
@@ -57,11 +87,14 @@
 	},
 	"SIGNUP":{
 		"Title": "Créer votre compte",
+		"SubTitle": "Accès gratuit et sans engagement",
 		"GoogleLogin": "se connecter avec google",
 		"Role": "Je veux rejoindre Entrepreneur-Studio en tant que : ",
 		"Entrepreneur": "Entrepreneur",
 		"YouAre": "Vous êtes : ",
 		"Incubator": "Conseil",
+		"EntrepreneurSubText": "Porteur de projet, associé",
+		"IncubatorSubText": " Incubateur, consultant, institutionnel, investisseur, autre conseil aux entrepreneurs",
 		"ShortText": "Rejoignez la communauté d'entrepreneurs",
 		"Email": "Email",
 		"Password": "Mot de passe",
@@ -226,7 +259,15 @@
 		"DeleteItem": "Supprimer",
 		"ShowExample": "Exemple",
 		"AddSocialNetwork": "Ajouter la page",
-		"ChooseLogo": "Selectionnez une image (resolution max : 300px*300px)"
+		"ChooseLogo": "Selectionnez une image ",
+		"ChooseLogoSubTitle" : "Ajouter une image (resolution max : 300px*300px)",
+		"ChooseLogButtonOther" : "Choisir une autre image",
+		"Background" : "Image de fond",
+		"UnsplashPictures" : "Images d'",
+		"UnsplashLink" : "Unsplash",
+		"ChooseLogButton" : "Choisir",
+		"SharingStatus" : "Partage"
+
 	},
 	"PROJECT_SOCIALNETWORK":{
 		"Title":"Ajouter ",
@@ -416,6 +457,8 @@
 		"AddToolLong":"Ajouter un outil ",
 		"AddToolShort":"Ajouter un outil",
 		"Stages": "Etapes",
+		"ToolsNumberText1": "outils",
+		"ToolsNumberText2": "partagés par la communauté Entrepreneur Studio",
 		"Categories": "Catégories"
 	},
 	"FEEDBACK":{
@@ -489,16 +532,21 @@
 	},
 	"RESOURCES":{
 		"AddResource": "Ajouter un lien vers une application",
-		"AddResourcePopoverTitle": "Ajouter nouvelle application",
+		"AddResourcePopoverTitle": "Ajouter une nouvelle application",
 		"AddResourceTitle": "Ajouter un nouveau lien vers une application",
-		"AddResourceStep1": "1. Selectionner votre application",
+		"AddResourcePopoverTabApplication": "Choisir une application existante",
+		"AddResourcePopoverTabApplicationShort": "Application existante",
+		"AddResourcePopoverTabLink": "Entrer un nouveau lien",
+		"AddResourcePopoverTabLinkShort": "Autre lien",
+		"AddResourceStep1": "1. Ajouter un lien vers une application OU choisir une application ci-dessous",
 		"AddResourceStep2": "2. Configurer l'application",
 		"AddResource": "Ajouter un nouveau lien vers une application",
 		"AddResourceGuidanteText": "Centralisez ici les liens vers les applications ou les sites utiles à votre projet ",
 		"AddResourceUrlPlaceholder": "par exemple: https://trello.com/b/UNrbWWxV/mvp-entrepreneur-studio",
-		"AddResourceFreeLink": "Ou ajouter un lien libre",
+		"AddResourceFreeLink":"Ajouter un lien vers une application non référencée ou un site utile pour votre projet",
 		"AddResourceUrlText": "Entrer le lien vers votre application",
-		"AddResourceOKButton": "Ajouter"
+		"AddResourceOKButton": "Ajouter",
+		"AddResourceUrlTextPlaceholder": "Votre lien"
 	},
 	"ADDTOOL":{ 
 		"Title": "Ajouter un nouvel outil",
@@ -514,6 +562,7 @@
 		"StatusOnGoing": "En cours",
 		"StatusDone": "Fini",
 		"StatusTodo": "A Faire",
+		"Dismiss": "Annuler",
 		"ItemDescription": "Description",
 		"ItemTimeObjective": "Objectif de temps",
 		"ItemDelivrable": "Délivrables",
